panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__arithmetic__test_arithmetic_between_const_and_nonconst.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/arithmetic/test_arithmetic_between_const_and_nonconst.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arithmetic/test_arithmetic_between_const_and_nonconst.c"
   (function-definition external stack-size=24
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (x~2 `int const` @0) (42 `int` @0))
         (definition (y~3 `int` @4) (27 `int` @4))
         (return
            (add `int` @8
               (x~2 `int const` @0)
               (y~3 `int` @4))))))

----- stderr -----
