panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__arithmetic__test_ptrdiff_simple.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/arithmetic/test_ptrdiff_simple.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arithmetic/test_ptrdiff_simple.c"
   (declaration external (calloc~0 `fn(∅: unsigned long, ∅: unsigned long) -> ptr<void>` (static calloc)) ∅)
   (function-definition external stack-size=72
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (definition (array~3 `ptr<int>` @0)
            (noop-type-conversion `ptr<int>` @0
               (call `ptr<void>` @0
                  (addressof `ptr<fn(∅: unsigned long, ∅: unsigned long) -> ptr<void>>` @8
                     (calloc~0 `fn(∅: unsigned long, ∅: unsigned long) -> ptr<void>` (static calloc)))
                  (sign-extend `unsigned long` @16 (42 `int` @24))
                  (4 `unsigned long` @32))))
         (definition (ptrdiff~4 `unsigned long` @8)
            (noop-type-conversion `unsigned long` @8
               (ptr-diff `long` @8
                  (addressof `ptr<int>` @8
                     (deref `int` @8
                        (ptr-add `ptr<int>` @16
                           (array~3 `ptr<int>` @0)
                           (sign-extend `long` @24 (10 `int` @32)))))
                  (addressof `ptr<int>` @24
                     (deref `int` @24
                        (ptr-add `ptr<int>` @32
                           (array~3 `ptr<int>` @0)
                           (sign-extend `long` @40 (0 `int` @48))))))))
         (return (truncate `int` @16 (ptrdiff~4 `unsigned long` @8))))))

----- stderr -----
